--- a/styles.css
+++ b/styles.css
@@ -1,30 +1,38 @@
-.container{
+.container {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     border: 10px solid blue;
     width: 320px;
     height: 100vh;
-};
+}
 
-.icon{
+;
+
+.icon {
     height: 70px;
-};
+}
 
-.name{
+;
+
+.name {
     background-color: blueviolet;
     font-size: 50px;
     width: 220px;
     height: 100px;
-};
+}
 
-.profile{
+;
+
+.profile {
     background-color: aqua;
     width: 288px;
     height: 126px;
     font-size: 14px;
 }
 
-.leftmargin{
+.leftmargin {
     margin: 16px;
-};
+}
+
+;
