--- a/styles.css
+++ b/styles.css
@@ -4,15 +4,15 @@
   flex-wrap: wrap;
   border: 10px solid blue;
   width: 320px;
-  height: 100vh;
-};
+  height: 100vh
+}
 
 .icon {
   height: 70px;
 }
 
 .name {
-  background-color: blueviolet;
+  background-color: blueviolet
   font-size: 50px;
   width: 220px;
   height: 100px;
@@ -21,7 +21,7 @@
 .profile {
   background-color: aqua;
   width: 288px;
-  height: 126px;
+  height: 126px
   font-size: 14px;
 }
 
