--- a/styles.css
+++ b/styles.css
@@ -7,9 +7,7 @@
   height: 100vh
 }
 
-.icon {
-  height: 70px;
-}
+.icon { height: 70px; }
 
 .name {
   background-color: blueviolet
@@ -25,6 +23,4 @@
   font-size: 14px;
 }
 
-.leftmargin {
-  margin: 16px;
-}
+.leftmargin { margin: 16px; }
