--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 }
 .icon { height: 70px; }
 .name {
-  background-color: blueviolet
+  background-color: blueviolet;
   font-size: 50px;
   width: 220px;
   height: 100px;
