--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@
 .profile {
   background-color: aqua;
   width: 288px;
-  height: 126px
+  height: 126px;
   font-size: 14px;
 }
 .leftmargin { margin: 16px; }
