--- a/styles.css
+++ b/styles.css
@@ -2,23 +2,37 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  border: 10px solid blue;
+  border: 10px solid black;
+  border-radius: 2%;
   width: 320px;
   height: 100vh;
+  background-color: black;
 }
 .icon { height: 70px; }
 
 .name {
-  background-color: blueviolet;
-  font-size: 50px;
-  width: 220px;
+  display: flex;
+  align-self: center;
+  color: orange;
+  font-size: 40px;
+  width: 70%;
   height: 100px;
 }
 
-.profile {
-  background-color: aqua;
-  width: 288px;
-  height: 126px;
-  font-size: 14px;
+.title {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  display: flex;
+  font-size: 20px;
+  align-self: center;
+  color: white;
 }
-.leftmargin { margin: 16px; }
+
+.profile {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: white;
+  display: flex;
+  align-self: center;
+  width: 90%;
+  height: 126px;
+  font-size: 16px;
+}
