--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body { margin: 0%; }
   flex-direction: column;
   width: 375px;
   height: 100vh;
-  background-color: #1C1A19;
+  background-color: #1c1a19;
   background-image: url("illustration-header-mobile.svg");
   background-repeat: no-repeat;
   background-position: bottom right;
@@ -20,10 +20,11 @@ body { margin: 0%; }
 }
 .list { padding-left: 0%; }
 
-.icon { height: 20px; 
-align-self: center;
-justify-items: center;
-padding-right: 20%;}
+.icon { 
+  height: 20px; 
+  align-self: center;
+  justify-items: center;
+  padding-right: 20%;}
 
 .center { 
   display: flex;
