--- a/styles.css
+++ b/styles.css
@@ -141,7 +141,7 @@ button:hover {
 
 .buttoncolorsa {
   height: 50%;
-  background-color: #ffffff;
+  background-color: #fff;
   border: 1px solid #8993a4;
   color: #091e42;
   margin-left: 5%;
@@ -152,7 +152,7 @@ button:hover {
   width: 40%;
   background-color: #ff6b00;
   border: none;
-  color: #ffffff;
+  color: #fff;
   font-weight: 800;
   padding: 12px;
   display: inline-block;
@@ -167,7 +167,7 @@ button:hover {
   height: 100%;
   background-color: rgb(108, 122, 137, 0.5);
   border: none;
-  color: #ffffff;
+  color: #fff;
   font-weight: 500;
   margin-left: 5%;
 }
@@ -175,7 +175,7 @@ button:hover {
 .buttoncolorsd {
   background-color: #ff6b00;
   border: none;
-  color: #ffffff;
+  color: #fff;
   width: 87.3%;
   font-weight: 800;
   padding: 12px 0%;
@@ -257,6 +257,6 @@ button:hover {
 
 .colorname { color: #ff6b00; }
 
-.colorprofile { color: #ffffff; }
+.colorprofile { color: #fff; }
 
 .colorbtitle { color: #1c1a19; }
